Ajout des images + BHlocbigtitle

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,7 @@ main{
     margin-bottom:250px;
 }
 
-footer.footer {
+footer.footer{
     padding: 15px;
     position: absolute;
     bottom: 0;
@@ -20,4 +20,32 @@ footer.footer {
 p{
     font-family: $font-family-serif;
     font-size: 18px;
+}
+
+.hero-scene{
+    position :relative;
+    &::before{
+        content: "";
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(../images/FondHeroScene.jpg);
+        background-size: cover;
+        filter: brightness(0.3);
+    }
+    
+    *{
+        //positionner les éléments devant le before
+        position: relative;
+    }
+
+    .hero-scene-content{
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
